# oracle

./: Cargo.toml
src/: canister_updates.rs  deposits.rs  disburse.rs  governance.rs  main.rs  split_new_withdrawal_neurons.rs
src/commands/: daily.rs  make_neuron.rs  mod.rs  setup.rs
src/deposits/: mod.rs
src/governance/: generated.rs  mod.rs
src/identity/: canister_identity.rs  mod.rs
src/ledger/: mod.rs
systemd/: daily.sh  oracle.service  oracle.timer
