[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.2"
ic-agent = "0.21.0"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "7fb55980481a526cda59e538114e7c3282d38f22" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "7fb55980481a526cda59e538114e7c3282d38f22" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "7fb55980481a526cda59e538114e7c3282d38f22" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "7fb55980481a526cda59e538114e7c3282d38f22" }
ic-types = "0.4.1"
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "7fb55980481a526cda59e538114e7c3282d38f22" }
tokio = { version = "1.15.0", features = [ "fs" ] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"

# forces reqwest to be >0.11.6 to avoid issues in agent-rs
reqwest = "0.11.10"
k256 = "0.11.4"
