[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
candid = "0.8.2"
ic-agent = "0.21.0"
ic-types = "0.4.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"

# forces reqwest to be >0.11.6 to avoid issues in agent-rs
reqwest = "0.11.10"
k256 = "0.11.4"
