[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.68"
candid = "0.8.4"
ic-agent = "0.23.2"
ic-types = "0.4.1"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "1ce7e5b0bd68760382eb2b3b810a11bd600770be" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "1ce7e5b0bd68760382eb2b3b810a11bd600770be" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "1ce7e5b0bd68760382eb2b3b810a11bd600770be" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"

# forces reqwest to be >0.11.6 to avoid issues in agent-rs
reqwest = "0.11.10"
k256 = "0.11.4"
